# SAFmini

./: .gitignore  CMakeLists.txt  PLC_Program_Structured_Text  PLC_Program_Variables  README.md  client.cpp  csv.h  csv_parser.h  doc.xml  main.cpp  main_win.cpp  operation_logs.txt  rapidcsv.h
csv-parser/: CMakeLists.txt  CodeCoverage.cmake  Doxyfile  README.md
csv-parser/modules/: CodeCoverage.cmake
pugixml/: pugixml.cpp  pugixml.hpp
